// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackgroundImage renders 1`] = `
.c0 {
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-color: #f9f9fa#ebeeef#dde1e4#cdd4d8#bcc5cb#a9b5bc#93a2ab#7a8c97#606e77#384046;
}

<div
  className="c0"
/>
`;

exports[`BackgroundImage renders with height 1`] = `
.c0 {
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-color: #f9f9fa#ebeeef#dde1e4#cdd4d8#bcc5cb#a9b5bc#93a2ab#7a8c97#606e77#384046;
  height: 320px;
}

<div
  className="c0"
  height="320px"
/>
`;

exports[`BackgroundImage renders with image 1`] = `
.c0 {
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  background-color: #f9f9fa#ebeeef#dde1e4#cdd4d8#bcc5cb#a9b5bc#93a2ab#7a8c97#606e77#384046;
  background-image: url(hello.png);
}

<div
  className="c0"
/>
`;
